--- a/Pomodoro/App.xaml
+++ b/Pomodoro/App.xaml
@@ -4,6 +4,22 @@
              xmlns:local="clr-namespace:Pomodoro"
              Startup="Application_Startup">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="Background" Value="#ef4f4f"/>
+                <Setter Property="Foreground" Value="#ffcda3"/>
+                <Setter Property="Width" Value="80"/>
+                <Setter Property="Height" Value="40"/>
+                <Setter Property="BorderBrush" Value="#ef4f4f"/>
+            </Style>
+            <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontSize" Value="30"/>
+            </Style>
+            <Style TargetType="Grid">
+                <Setter Property="Background" Value="#74c7b8"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
