--- a/Pomodoro/MainWindow.xaml
+++ b/Pomodoro/MainWindow.xaml
@@ -6,10 +6,11 @@
         xmlns:local="clr-namespace:Pomodoro"
         xmlns:conv="clr-namespace:Pomodoro.Converters"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Pomodoro" Height="450" Width="800" >
     <Window.Resources>
         <conv:RepToVisivilityConverter x:Key="RepToVisivilityConverter"></conv:RepToVisivilityConverter>
     </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -25,10 +26,10 @@
         <Image Grid.Row="1" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/Tomato.png" />
         <Label Grid.Row="1" Grid.ColumnSpan="2" Content="{Binding Timer.Time,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=1}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant"></Image>
-            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=2}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant"></Image>
-            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=3}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant"></Image>
-            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=4}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant"></Image>
+            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=1}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant" Height="35"></Image>
+            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=2}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant" Height="35"></Image>
+            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=3}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant" Height="35"></Image>
+            <Image Grid.Row="2" Grid.ColumnSpan="2" Source="/Pomodoro;component/Images/roundabout-Pixelmeetup.png " Visibility="{Binding Repetitions,Converter={StaticResource RepToVisivilityConverter},ConverterParameter=4}" Margin="20 0" RenderOptions.BitmapScalingMode="Fant" Height="35"></Image>
         </StackPanel>
         <Button Grid.Row="3" Content="Start"  Command="{Binding StartCommand}"/>
         <Button Grid.Row="3" Grid.Column="1" Content="Reset"  Command="{Binding ResetCommand}"/>
