--- a/Pomodoro/App.xaml
+++ b/Pomodoro/App.xaml
@@ -12,6 +12,7 @@
                 <Setter Property="Width" Value="80"/>
                 <Setter Property="Height" Value="40"/>
                 <Setter Property="BorderBrush" Value="#ef4f4f"/>
+                <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"></Setter>
             </Style>
             <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
                 <Setter Property="Foreground" Value="White"/>
